--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <figure>
         <img
-          src="assets/img/bg-mano.png"
+          src="assets/img/Frame 1 (1).png"
           alt="Imagem do cantor de trap Matuê"
         />
         <!-- <figcaption>Imagem do cantor de rap Matuê</figcaption> -->
@@ -47,9 +47,9 @@
       <section class="projects">
         <h2 class="underline">Projetos</h2>
         <!-- Card 1 -->
-        <div class="card">
+        <div class="card_1">
           <div class="card-left">
-            <h3>Maquina do Tempo</h3>
+            <h3 class="h3_card">Maquina do Tempo</h3>
             <p>
               Máquina do Tempo é o álbum de estreia do rapper brasileiro Matuê,
               lançado em 10 de setembro de 2020 pela Sony Music e o próprio selo
@@ -58,11 +58,11 @@
               alcançando as primeiras posições da lista de canções mais
               escutadas na plataforma de streaming no país.
             </p>
-            <button>Ver Projeto</button>
+            <button class="button_card1">Ver Projeto</button>
           </div>
           <div class="card-right">
             <img
-              src="assets/img/mano-spot.png"
+              src="assets/img/capa-mqn-tempo.jpeg"
               alt="Imagem do cantor de trap Matuê"
             />
           </div>
@@ -82,7 +82,7 @@
           </div>
           <div class="card-right">
             <img
-              src=""
+              src="assets/img/30praum.jpg"
               alt="Imagem do cantor da 30PRAUM"
             />
           </div>
@@ -90,7 +90,7 @@
         <!-- Card 3 -->
         <div class="card">
           <div class="card-left">
-            <h3>333</h3>
+            <h3 class="h3_card3">333</h3>
             <p>
               333 (também intitulado como 333 - Salve Todos) é o segundo álbum
               de estúdio do rapper brasileiro Matuê, lançado em 9 de setembro de
@@ -98,11 +98,11 @@
               de Teto, Veigh e Brandão85, a produção foi carregada pelo próprio
               Matuê, junto com Brandão85 e Samuel Batista
             </p>
-            <button>Ver Projeto</button>
+            <button class="button-left">Ver Projeto</button>
           </div>
           <div class="card-right">
             <img
-              src="assets/img/racionais.jpeg"
+              src="assets/img/333-capa.jpeg"
               alt="Imagem do cantor de trap Matuê"
             />
           </div>
@@ -155,7 +155,7 @@
           /></a>
         </div>
         <p>Matuê 2025</p>
-        <img src="assets/img/footer.png" alt="Retangulo da pagina" />
+        <img class="inferior" src="assets/img/footer.png" alt="Retangulo da pagina" />
       </footer>
     </main>
   </body>
