alteração do button
alteração na cor do button do card1

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               casting da produtora, que tem como objetivo fomentar a cena do rap
               e trap no Nordeste.
             </p>
-            <button>Ver Projeto</button>
+            <button class="button_card2">Ver Projeto</button>
           </div>
           <div class="card-right">
             <img
