Alteração nos buttons do about
alterei o nome de linkedin para spotify, e modifiquei as cores do button spotify

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </p>
         <div class="buttons">
           <button class="primary">Projetos</button>
-          <button class="secondary">LinkedIn</button>
+          <button class="secondary">Spotify</button>
         </div>
       </section>
       <section class="projects">
